--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "Vue-Helios",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "基于webpack 3.x的Vue 2.x脚手架",
-  "author": "YeaseonZhang <yeaseonzhang@gmail.com>",
+  "author": "Yeaseon Zhang",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js && node build/pack.js && mv app.zip ./dist/"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "qs": "^6.6.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-awesome-swiper": "^2.6.7",
+    "vue-lazyload": "^1.1.4",
+    "vue-router": "^3.0.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "archiver": "^2.1.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
+    "babel-polyfill": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -66,8 +73,7 @@
     "npm": ">= 3.0.0"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "ios >= 8.0",
+    "android >= 4.4"
   ]
 }
